Minor yaml formatting changes

--- a/docs/api-reference/CRMScript.Native.Message.yml
+++ b/docs/api-reference/CRMScript.Native.Message.yml
@@ -363,7 +363,7 @@ items:
   fullName: CRMScript.Native.Message.send(Vector,Vector,Vector,String,String)
   type: Method
   summary: "\nSends an email version of the message to the main contacts on the parent ticket using the given subject, and a given heading for the body part.\n"
-  remark: "\nThe body heading may be empty for no heading, or null for default heading (same as not using this parameter).\n"
+  remarks: "\nThe body heading may be empty for no heading, or null for default heading (same as not using this parameter).\n"
   syntax: 
     content: Bool send(Vector to, Vector cc, Vector bcc, String subject, String bodyHeading)
     parameters:
