--- a/docs/api-reference/CRMScript.Native.SpmShipment.yml
+++ b/docs/api-reference/CRMScript.Native.SpmShipment.yml
@@ -162,7 +162,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      describes: ID of the SpmShipment object
+      description: ID of the SpmShipment object
   example: 
 - uid: CRMScript.Native.SpmShipment.setDescription(String)
   commentId: M:CRMScript.Native.SpmShipment.setDescription(String)
@@ -286,7 +286,7 @@ items:
     parameters:
     - id: start
       type: CRMScript.Global.DateTime
-      describes: the start date and time for this shipment
+      description: the start date and time for this shipment
   example: 
 references:
 - uid: CRMScript.Native.SpmShipment
