--- a/docs/api-reference/CRMScript.Native.SpmStaticList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmStaticList.yml
@@ -158,7 +158,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      describes: The ID of the SpmStaticList object
+      description: The ID of the SpmStaticList object
   example: 
 - uid: CRMScript.Native.SpmStaticList.setFolderId(Integer)
   commentId: M:CRMScript.Native.SpmStaticList.setFolderId(Integer)
