Minor yaml formatting changes, 2

--- a/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
@@ -200,7 +200,7 @@ items:
     parameters: []
     return:
       type: CRMScript.NetServer.NSBlobEntity
-      describe: New BlobEntity with default values
+      description: New BlobEntity with default values
   example: 
   - "\n<pre><code>NSBLOBAgent agent;\nNSBlobEntity thing = agent.CreateDefaultBlobEntity();\nthing = agent.SaveBlobEntity(thing);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBLOBAgent.DeleteBlobEntity(Integer)
@@ -291,7 +291,7 @@ items:
       description: The contact ID
     return:
       type: CRMScript.NetServer.NSBlobEntity
-      describe: BlobEntity object
+      description: BlobEntity object
   example: 
   - "\n<pre><code>NSBLOBAgent agent;\nInteger contactId;\nNSBlobEntity res = agent.GetBlobEntityOnContact(contactId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBLOBAgent.GetBlobEntityOnCountry(Integer)
