--- a/docs/api-reference/CRMScript.NetServer.NSBatchAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchAgent.yml
@@ -250,7 +250,7 @@ items:
       description: Use BatchTaskInfo to describe the new batch job.
     return:
       type: CRMScript.Global.Integer
-      describe: The ID of the created batch job.
+      description: The ID of the created batch job.
   example: 
   - "\n<pre><code>NSBatchAgent agent;\nNSBatchTaskInfo batchTaskInfo;\nInteger res = agent.StartBatchJob(batchTaskInfo);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchAgent.StopBatchJob(Integer)
