--- a/docs/api-reference/CRMScript.NetServer.NSBlobEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBlobEntity.yml
@@ -311,7 +311,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.DateTime
-      describe: Last updated when
+      description: Last updated when
   example: 
   - "\n<pre><code>NSBlobEntity thing;\nDateTime updatedDate = thing.GetUpdatedDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSBlobEntity.SetBlobId(Integer)
