--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
@@ -87,7 +87,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      databases: Processed via tag substitution to give document reference
+      description: Processed via tag substitution to give document reference
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nString defaultOref = thing.GetDefaultOref();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.GetDeleted()
