--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceInfo.yml
@@ -69,7 +69,7 @@ items:
     parameters: []
     return:
       type: CRMScript.NetServer.NSRecurrenceDate[]
-      describing:
+      description:
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetDayPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetDayPattern()
