--- a/docs/api-reference/CRMScript.NetServer.NSRedLetterInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRedLetterInformationListItem.yml
@@ -71,7 +71,7 @@ items:
     parameters: []
     return:
       type: CRMScript.NetServer.NSRedLetterDetails
-      describing: Red-letter day text details, all the texts related to the given day.
+      description: Red-letter day text details, all the texts related to the given day.
   example: 
   - "\n<pre><code>NSRedLetterInformationListItem thing;\nNSRedLetterDetails redLetterDetails = thing.GetRedLetterDetails();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRedLetterInformationListItem.GetRedLetterInformation()
