--- a/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
@@ -269,7 +269,7 @@ items:
     parameters: []
     return:
       type: CRMScript.NetServer.NSAssociate
-      describing: Last updated by user
+      description: Last updated by user
   example: 
   - "\n<pre><code>NSRoleEntity thing;\nNSAssociate updatedBy = thing.GetUpdatedBy();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRoleEntity.GetUseCategories()
