--- a/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
@@ -131,7 +131,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Map
-      Estimated: Custom values to inject into JSON body of webhook call.
+      description: Custom values to inject into JSON body of webhook call.
   example: 
   - "\n<pre><code>NSWebhook thing;\nMap properties = thing.GetProperties();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebhook.GetRegistered()
