--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
@@ -155,7 +155,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      describing: Entire system, per database, or per associate. See <xref href=\"CRMScript.NetServer.LicenseType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Entire system, per database, or per associate. See <xref href=\"CRMScript.NetServer.LicenseType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSModuleLicense thing;\nInteger licenseType = thing.GetLicenseType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicense.GetModuleDescription()
